fix: body overlapping

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-  /* @apply overflow-x-hidden; */
+  @apply overflow-x-hidden;
   scroll-behavior: smooth;
 }
 
